--- a/API For Graphics Plotting/GraphPlottinAPI/GraphPlottinAPI.csproj
+++ b/API For Graphics Plotting/GraphPlottinAPI/GraphPlottinAPI.csproj
@@ -122,6 +122,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\GraphsCreator.cs" />
+    <Compile Include="Models\Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
