--- a/API For Graphics Plotting/GraphPlottinAPI/GraphPlottinAPI.csproj
+++ b/API For Graphics Plotting/GraphPlottinAPI/GraphPlottinAPI.csproj
@@ -123,6 +123,7 @@
     </Compile>
     <Compile Include="Models\GraphsCreator.cs" />
     <Compile Include="Models\Point.cs" />
+    <Compile Include="Models\RequestParameters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
