--- a/WPF_API_WCF_CRUD_For_Directory/WebApi_Client_For_WCF/Web.config
+++ b/WPF_API_WCF_CRUD_For_Directory/WebApi_Client_For_WCF/Web.config
@@ -57,4 +57,16 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IServiceIO" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:8733/Design_Time_Addresses/WCF_Server_For_API/ServiceIO/"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceIO"
+        contract="ServiceReference1.IServiceIO" name="BasicHttpBinding_IServiceIO" />
+    </client>
+  </system.serviceModel>
 </configuration>
