--- a/BetRayer.v1.0/WpfHosting/App.config
+++ b/BetRayer.v1.0/WpfHosting/App.config
@@ -1,49 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
-    </startup>
-  
-<system.servicemodel>
-        <services>
-            <service name="WCFService.Service"  behaviorconfiguration="behaviorConfig">
-              
-                <host>
-                    <baseaddresses>
-                        <add baseaddress="net.tcp://localhost:7997/WpfHosting/" />
-                        <add baseaddress="http://localhost:7998/WpfHosting/" />
-                    </baseaddresses>
-                </host>
-              
-                <endpoint contract="ServiceAssembly.IChat" binding="netTcpBinding" address="tcp" bindingconfiguration="tcpBinding" />
-                <endpoint contract="IMetadataExchange" binding="mexTcpBinding" address="net.tcp://localhost:7996/WcfWinFormsHost/mex" />
-            
-            </service>
-        </services>
-  
-        <behaviors>
-            <servicebehaviors>
-                <behavior name="behaviorConfig">
-                    <servicemetadata httpgetenabled="true" />
-                    <servicedebug includeexceptiondetailinfaults="true" />
-                    <servicethrottling maxconcurrentcalls="100"  maxconcurrentsessions="100" />
-                </behavior>
-            </servicebehaviors>
-        </behaviors>
-  
-        <bindings>
-            <nettcpbinding>
-                <binding name="tcpBinding" maxbuffersize="67108864" maxreceivedmessagesize="67108864" maxbufferpoolsize="67108864"
-                 transfermode="Buffered" closetimeout="00:00:10" 
-                 opentimeout="00:00:10" receivetimeout="00:20:00" 
-                 sendtimeout="00:01:00" maxconnections="100">
-                    <security mode="None"> </security>
-                    <readerquotas maxarraylength="67108864"  maxbytesperread="67108864" maxstringcontentlength="67108864" />
-                    <reliablesession enabled="true" inactivitytimeout="00:20:00" />
-                </binding>
-            </nettcpbinding>
-        </bindings>
-
-</system.servicemodel>
-
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+  </startup>
 </configuration>
