--- a/BetRayerChatHttp.v.2.0/WcfServiceLibraryForChat/WcfServiceLibraryForChat.csproj
+++ b/BetRayerChatHttp.v.2.0/WcfServiceLibraryForChat/WcfServiceLibraryForChat.csproj
@@ -45,9 +45,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IService1.cs" />
+    <Compile Include="IChatContract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service1.cs" />
+    <Compile Include="IChatService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
