--- a/BetRayerChatTCP.v1.1/WCF_WPF_ServiceTCP/WCF_WPF_ServiceTCP.csproj
+++ b/BetRayerChatTCP.v1.1/WCF_WPF_ServiceTCP/WCF_WPF_ServiceTCP.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LatinTo ArmClassLibrary">
+      <HintPath>..\..\..\Useful-examples2\LatinToArmenianConverter\LatinTo ArmClassLibrary\bin\Debug\LatinTo ArmClassLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.ServiceModel" />
