service class library added

--- a/BetRayerChatTCP.v1.1/WCF_WPF_ServiceTCP/WCF_WPF_ServiceTCP.csproj
+++ b/BetRayerChatTCP.v1.1/WCF_WPF_ServiceTCP/WCF_WPF_ServiceTCP.csproj
@@ -67,7 +67,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="IChatTCP.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -99,6 +98,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ServiceClassLibrary\ServiceClassLibrary.csproj">
+      <Project>{0b579686-3c35-40f0-9079-1fe3fa69169f}</Project>
+      <Name>ServiceClassLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
