--- a/BetRayerChatTCP.v1.1/WpfClient(CallBack)/WpfClient(CallBack).csproj
+++ b/BetRayerChatTCP.v1.1/WpfClient(CallBack)/WpfClient(CallBack).csproj
@@ -64,7 +64,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="IChatTCP.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -96,6 +95,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ServiceClassLibrary\ServiceClassLibrary.csproj">
+      <Project>{0b579686-3c35-40f0-9079-1fe3fa69169f}</Project>
+      <Name>ServiceClassLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
