--- a/BetRayerChatTCP.v1.1/WpfClient(CallBack)/WpfClient(CallBack).csproj
+++ b/BetRayerChatTCP.v1.1/WpfClient(CallBack)/WpfClient(CallBack).csproj
@@ -68,8 +68,15 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PrivateMessWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PrivateMessWindow.xaml.cs">
+      <DependentUpon>PrivateMessWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
