--- a/BetRayerChatTCP.v1.1/WCF_WPF_ServiceTCP/WCF_WPF_ServiceTCP.csproj
+++ b/BetRayerChatTCP.v1.1/WCF_WPF_ServiceTCP/WCF_WPF_ServiceTCP.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GoogleTranslateAPI, Version=0.3.1.107, Culture=neutral, PublicKeyToken=37a8e65b17fcdcbb, processorArchitecture=MSIL">
+      <HintPath>..\packages\Google.Translate.api.0.3.1\lib\net40\GoogleTranslateAPI.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="LatinTo ArmClassLibrary">
       <HintPath>..\..\..\Useful-examples2\LatinToArmenianConverter\LatinTo ArmClassLibrary\bin\Debug\LatinTo ArmClassLibrary.dll</HintPath>
     </Reference>
@@ -90,6 +94,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
